# pcp-jepa-research

./: .experiment.pid  .experiment_checkpoint  .gitignore  CODE_REVIEW.md  DOCUMENTATION.md  EXPERIMENT_RESULTS.md  MUJOCO_LOG.TXT  PAPER_DRAFT.md  PHASE2_PLAN.md  PUBLICATION_FIX_PLAN.md  README.md  RESEARCH_PLAN.md  aggregate_results.py  import_times.txt  prof.out  pyproject.toml  requirements.txt  run_all_extras.py  run_experiments.py  run_missing.py  run_neurips_evals.sh  run_protected.sh  run_simple.sh  test_ant.py  test_pano.py  test_profile.py  test_trace.py  test_trace_thread.py  wait_log.py
.checkpoints/: current_stage.json  experiment_suite.json
archive_phase1_to_4/: ARCHIVE.md  o1_event_consistency.py  o3_event_uncertainty.py
archive_phase1_to_4/forensics/: final_conclusions.py  gate_A2_mppi_verification.py  run_phase_A.py
archive_phase1_to_4/forensics_root/: config.json
archive_phase1_to_4/pcp_jepa/: __init__.py
archive_phase1_to_4/phase1/: exp_failure_law.py  run_all.py
archive_phase1_to_4/phase2/: debug_mppi_internals.py  deep_debug.py  eval_film_model.py  evaluate_mppi.py  hybrid_simple.py  mppi_prejit.py  option_b_hybrid.py  oracle_H30.py  oracle_check.py  oracle_jit.py  paper_grade_eval.py  run_e1_o1_o3.py  run_fast.py  run_integrated.py  run_mppi.py  run_proper_evaluation.py  test_mppi.py  triage_dynamics.py
archive_phase1_to_4/phase3/: discontinuity_sensitivity.py  ess_logging.py  event_segmented_planning.py  horizon_sweep.py  knot_sweep.py  linear_feedback_latent.py  raw_vs_enhanced.py  validate_sweep.py
archive_phase1_to_4/phase4/: mode_controller.py
experiments/phase1/: run_all.py
forensics/: gate_A1_results.json  gate_A2_results.json  random_metadata.pkl  random_trajectories.pkl  seeds.json
memory/: 2026-02-23.md
scripts/: run_phase1.sh
tests/: test_environments.py  test_envs.py  test_event_jepa.py  test_experiment_utils.py  test_f3_jepa.py  test_integration.py  test_jepa.py  test_models.py  test_pano.py  test_stats.py
(+164 files in other folders)
